Fix xml2json common XML parser to not depend on blindly skipping over end of element events. Could cause mis-matched JSON output